// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adding team users able to add team members 1`] = `
Object {
  "data": Object {
    "addTeamUser": Object {
      "users": Array [
        Object {
          "email": "rowan@atkinson.com",
          "name": "Rowan Atkinson",
          "tz": "America/Los_Angeles",
        },
        Object {
          "email": "felicity@atkinson.com",
          "name": "Felicity Atkinson",
          "tz": "America/Los_Angeles",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Adding team users unable to add team member with missing fields 1`] = `
Object {
  "code": "BAD_USER_INPUT",
  "exception": Object {
    "errors": Object {
      "email": "Email must be a valid email",
      "name": "Name must be at least 1 characters",
    },
  },
}
`;

exports[`Fetching team is able to fetch own team 1`] = `
Object {
  "data": Object {
    "team": Object {
      "id": Any<String>,
      "name": "Chinese Ancient",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Listing team users able to get only own team users 1`] = `
Object {
  "data": Object {
    "team": Object {
      "name": "Gladiators",
      "users": Array [
        Object {
          "email": "russell@crowe.com",
          "name": "Russell Crowe",
          "tz": "America/Los_Angeles",
        },
        Object {
          "email": "maxwell@crowe.com",
          "name": "Maxwell Crowe",
          "tz": "America/Los_Angeles",
        },
        Object {
          "email": "shannon@crowe.com",
          "name": "Shannon Crowe",
          "tz": "America/Los_Angeles",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Removing team users able to remove team members 1`] = `
Object {
  "data": Object {
    "removeTeamUser": Object {
      "name": "Despicable Me",
      "users": Array [
        Object {
          "email": "gru@evilson.com",
          "name": "Gru Evilson",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Removing team users not able to remove oneself from own team 1`] = `
Object {
  "code": "BAD_USER_INPUT",
  "exception": Object {
    "errors": Object {
      "auth": "You are not authorized to perform this action",
    },
  },
}
`;

exports[`Removing team users not able to remove other team's members 1`] = `
Object {
  "code": "BAD_USER_INPUT",
  "exception": Object {
    "errors": Object {
      "auth": "You are not authorized to perform this action",
    },
  },
}
`;

exports[`Updating team is able to update own team 1`] = `
Object {
  "data": Object {
    "updateTeam": Object {
      "id": Any<String>,
      "name": "Shadow forest",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Updating team is not able to update not own team 1`] = `
Object {
  "code": "BAD_USER_INPUT",
  "exception": Object {
    "errors": Object {
      "auth": "You are not authorized to perform this action",
    },
  },
}
`;
